Slim Recents iconpack support [2/2]
ezio:
adapted IconPackHelper from CM trebuchet (https://review.lineageos.org/#/c/136600/)
with latest OmniSwitch improvements;
splitted the whole dialog part and moved it into Settings;
i've set here Danesh as commit author because he made the original IconPackHelper
code long time ago.

Change-Id: I95ff93f3c36e0e21f350ad8e092604c2da6573c9

--- a/packages/SlimSettings/res/values/dimens.xml
+++ b/packages/SlimSettings/res/values/dimens.xml
@@ -39,4 +39,5 @@
     <!-- ActionBar contentInsetStart -->
     <dimen name="actionbar_contentInsetStart">16dp</dimen>
 
+    <dimen name="alert_dialog_padding_material">20dp</dimen>
 </resources>
