--- a/res/res/values/symbols.xml
+++ b/res/res/values/symbols.xml
@@ -15,6 +15,7 @@
 
     <java-symbol type="array" name="shortcut_icon_picker_labels" />
     <java-symbol type="array" name="shortcut_icon_picker_icons" />
+    <java-symbol type="array" name="screen_off_actions_to_exclude" />
     <java-symbol type="array" name="icon_types" />
 
     <java-symbol type="color" name="dslv_icon_dark" />
