Cleanup SlimSettings layouts on tablets
Change-Id: I403530f86015f8047be064a222d3586166cd4792

--- a/packages/SlimSettings/res/values-sw720dp/dimens.xml
+++ b/packages/SlimSettings/res/values-sw720dp/dimens.xml
@@ -13,4 +13,8 @@
 
 <resources>
     <dimen name="settings_side_margin">64dp</dimen>
+
+    <!-- Dashboard padding in its container -->
+    <dimen name="dashboard_padding_start">80dp</dimen>
+    <dimen name="dashboard_padding_end">80dp</dimen>
 </resources>
