--- a/packages/SlimSettings/res/values-sw720dp-land/dimens.xml
+++ b/packages/SlimSettings/res/values-sw720dp-land/dimens.xml
@@ -13,5 +13,7 @@
 
 <resources>
     <dimen name="settings_side_margin">112dp</dimen>
-
+    <!-- Dashboard padding in its container -->
+    <dimen name="dashboard_padding_start">160dp</dimen>
+    <dimen name="dashboard_padding_end">160dp</dimen>
 </resources>
