--- a/packages/SlimSettings/res/values/themes.xml
+++ b/packages/SlimSettings/res/values/themes.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2016 The SlimRoms Project
+<!-- Copyright (C) 2016-217 SlimRoms Project
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
@@ -13,11 +13,11 @@
 
 <resources>
 
-    <style name="PreferenceTheme" parent="@android:style/Theme.DeviceDefault.Settings">
-        <item name="preferenceStyle">@style/Preference</item>
-        <item name="editTextPreferenceStyle">@style/EditTextPreference</item>
-        <item name="dropdownPreferenceStyle">@style/Preference.DropDown.Material</item>
-        <item name="preferenceFragmentStyle">@style/PreferenceFragmentStyle</item>
+    <style name="PreferenceTheme" parent="@style/PreferenceThemeOverlay.v14.Material">
+        <item name="@android:preferenceStyle">@style/Preference</item>
+        <item name="@android:editTextPreferenceStyle">@style/EditTextPreference</item>
+        <item name="@dropdownPreferenceStyle">@style/Preference.DropDown.Material</item>
+        <item name="@android:preferenceFragmentStyle">@style/PreferenceFragmentStyle</item>
     </style>
 
     <!-- Theme with no local references, used by AccountPreferenceBase where we have to inflate
@@ -28,18 +28,18 @@
 
     <style name="Theme.Settings" parent="Theme.SettingsBase">
         <item name="preferenceTheme">@style/PreferenceTheme</item>
-        <item name="preferenceHeaderPanelStyle">@style/PreferenceHeaderPanelSinglePane</item>
-        <item name="preferencePanelStyle">@style/PreferencePanelSinglePane</item>
-        <item name="preferenceListStyle">@style/PreferenceHeaderListSinglePane</item>
-        <item name="preferenceFragmentListStyle">@style/PreferenceFragmentListSinglePane</item>
-        <item name="preferenceFragmentPaddingSide">@dimen/settings_side_margin</item>
+        <item name="@*android:preferenceHeaderPanelStyle">@style/PreferenceHeaderPanelSinglePane</item>
+        <item name="@*android:preferencePanelStyle">@style/PreferencePanelSinglePane</item>
+        <item name="@*android:preferenceListStyle">@style/PreferenceHeaderListSinglePane</item>
+        <item name="@*android:preferenceFragmentListStyle">@style/PreferenceFragmentListSinglePane</item>
+        <item name="@*android:preferenceFragmentPaddingSide">@dimen/settings_side_margin</item>
 
         <!-- Redefine the ActionBar style for contentInsetStart -->
         <item name="android:actionBarStyle">@style/Theme.ActionBar</item>
-        <item name="android:actionBarSize">@dimen/actionbar_size</item>
+        <item name="@*android:actionBarSize">@dimen/actionbar_size</item>
 
         <!-- For all Alert Dialogs -->
-        <item name="alertDialogTheme">@style/Theme.AlertDialog</item>
+        <item name="android:alertDialogTheme">@style/Theme.AlertDialog</item>
     </style>
 
     <style name="Theme.AlertDialog" parent="@*android:style/Theme.Material.Settings.Dialog.Alert">
