--- a/packages/SlimSettings/res/xml/navbar_style_dimen_settings.xml
+++ b/packages/SlimSettings/res/xml/navbar_style_dimen_settings.xml
@@ -14,7 +14,8 @@
      limitations under the License.
 -->
 
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ListPreference
         android:entries="@array/navigation_bar_height_entries"
