--- a/preference/res/layout/preference_increasing_ring.xml
+++ b/preference/res/layout/preference_increasing_ring.xml
@@ -23,7 +23,7 @@
     android:paddingEnd="?android:attr/scrollbarSize">
 
     <ImageView
-        android:id="@+android:id/icon"
+        android:id="@android:id/icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
