[2/2] SlimDoze: add tilt gesture
Change-Id: Ie59de39bc8f76e1e82d997f36ee64674d2908911
Signed-off-by: Jean-Pierre Rasquin <yank555.lu@gmail.com>

--- a/packages/SlimSettings/res/xml/doze_settings.xml
+++ b/packages/SlimSettings/res/xml/doze_settings.xml
@@ -83,6 +83,13 @@
             android:persistent="false" />
 
     <SwitchPreference
+            android:key="doze_trigger_tilt"
+            android:title="@string/doze_trigger_tilt_title"
+            android:summaryOn="@string/doze_trigger_tilt_summary_on"
+            android:summaryOff="@string/doze_trigger_tilt_summary_off"
+            android:persistent="false" />
+
+    <SwitchPreference
             android:key="doze_trigger_sigmotion"
             android:title="@string/doze_trigger_sigmotion_title"
             android:summaryOn="@string/doze_trigger_sigmotion_summary_on"
