Make Slim Framework a protected component manager
This allows to start protected application from the "Protected apps"
activity without re-inserting the secret code.

Change-Id: Iaf727d741ef8e302b76a566ae9cd6a5031c85079

--- a/packages/SlimSettingsProvider/res/values/defaults.xml
+++ b/packages/SlimSettingsProvider/res/values/defaults.xml
@@ -17,5 +17,6 @@
  */
 -->
 <resources>
-
+    <string name="def_protected_component_managers" translatable="false">
+            com.android.settings|com.android.launcher3|org.slim.SlimSettings|org.slim.framework</string>
 </resources>
