--- a/res/res/values/symbols.xml
+++ b/res/res/values/symbols.xml
@@ -190,4 +190,8 @@
     <java-symbol type="string" name="increasing_ring_volume_option_title" />
     <java-symbol type="string" name="increasing_ring_min_volume_title" />
     <java-symbol type="string" name="increasing_ring_ramp_up_time_title" />
+
+    <java-symbol type="integer" name="config_buttonBrightnessSettingDefault" />
+    <java-symbol type="integer" name="config_keyboardBrightnessSettingDefault" />
+    <java-symbol type="bool" name="config_deviceHasVariableButtonBrightness" />
 </resources>
