--- a/packages/SlimSettings/res/xml/slim_interface_settings.xml
+++ b/packages/SlimSettings/res/xml/slim_interface_settings.xml
@@ -17,7 +17,7 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/interface_settings_title"
-    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+    xmlns:slim="http://schemas.android.com/apk/res/slim">
 
     <PreferenceScreen
         android:key="status_bar"
@@ -29,8 +29,16 @@
     <PreferenceScreen
         android:key="recent_panel"
         android:fragment="com.slim.settings.fragments.RecentPanel"
-        android:title="@string/recent_panel_category">
+        android:title="@string/recents_settings">
         <extra android:name="preference_xml" android:value="recent_panel_settings" />
+        <extra android:name="tile_limit" android:value="1" />
+    </PreferenceScreen>
+
+    <PreferenceScreen
+        android:key="navigation_settings"
+        android:fragment="com.slim.settings.fragments.SlimPreferenceFragment"
+        android:title="@string/navigation_settings_title">
+        <extra android:name="preference_xml" android:value="slim_navigation_settings" />
     </PreferenceScreen>
 
 </PreferenceScreen>
