--- a/preference/res/drawable/ic_menu_add.xml
+++ b/preference/res/drawable/ic_menu_add.xml
@@ -22,7 +22,7 @@
     android:tint="?android:attr/colorAccent">
 
     <path
-        android:fillColor="@android:color/white"
+        android:fillColor="#FF000000"
         android:pathData="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
     <path
         android:pathData="M0 0h24v24H0z" />
