--- a/res/res/drawable/ic_menu_add.xml
+++ b/res/res/drawable/ic_menu_add.xml
@@ -18,10 +18,11 @@
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:viewportHeight="24"
+    android:tint="?android:attr/colorAccent">
 
     <path
-        android:fillColor="#ffffffff"
+        android:fillColor="@android:color/white"
         android:pathData="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
     <path
         android:pathData="M0 0h24v24H0z" />
