Move Screen off gesture settings to SlimSettings
Change-Id: I1ce1f3104580ff2802d68db0947e0d43c8f15e6b

--- a/res/res/values/attrs.xml
+++ b/res/res/values/attrs.xml
@@ -80,4 +80,11 @@
         <attr name="units" format="string|reference" />
     </declare-styleable>
 
+    <declare-styleable name="TouchscreenGesture">
+        <attr name="scancode" format="integer" />
+        <attr name="name" format="string" />
+        <attr name="path" format="string" />
+        <attr name="defaultAction" format="string" />
+    </declare-styleable>
+
 </resources>
