--- a/packages/SlimSettings/res/xml/slim_navigation_settings.xml
+++ b/packages/SlimSettings/res/xml/slim_navigation_settings.xml
@@ -33,11 +33,7 @@
     <!-- DeviceHandler device specific screen off gesture settings -->
     <slim.preference.SlimPreference
         android:key="screen_off_gesture_settings"
-        android:title="@string/screen_off_gesture_settings_title">
-            <intent
-                android:action="com.slim.action.LAUNCH_SCREEN_OFF_GESTURE_SETTINGS"
-                android:targetPackage="com.slim.device"
-                android:targetClass="com.slim.device.settings.ScreenOffGestureSettings" />
-    </slim.preference.SlimPreference>
+        android:title="@string/screen_off_gesture_settings_title"
+        android:fragment="com.slim.settings.gestures.ScreenOffGesture"/>
 
 </PreferenceScreen>
