--- a/res/res/values/config.xml
+++ b/res/res/values/config.xml
@@ -50,4 +50,15 @@
     <integer name="config_buttonBrightnessSettingDefault">255</integer>
     <integer name="config_keyboardBrightnessSettingDefault">0</integer>
     <bool name="config_deviceHasVariableButtonBrightness">false</bool>
+
+     <!-- Paths to the libraries that contain device specific key handlers -->
+    <string-array name="config_deviceKeyHandlerLibs" translatable="false">
+        <item>/system/priv-app/SlimSettings/SlimSettings.apk</item>
+    </string-array>
+
+    <!-- Names of the key handler classes -->
+    <string-array name="config_deviceKeyHandlerClasses" translatable="false">
+        <item>com.slim.settings.gestures.KeyHandler</item>
+    </string-array>
+
 </resources>
