--- a/res/res/values/symbols.xml
+++ b/res/res/values/symbols.xml
@@ -195,4 +195,16 @@
     <java-symbol type="integer" name="config_buttonBrightnessSettingDefault" />
     <java-symbol type="integer" name="config_keyboardBrightnessSettingDefault" />
     <java-symbol type="bool" name="config_deviceHasVariableButtonBrightness" />
+
+    <java-symbol type="xml" name="touchscreen_gestures" />
+    <java-symbol type="string" name="gesture_arrow_down_title" />
+    <java-symbol type="string" name="gesture_arrow_left_title" />
+    <java-symbol type="string" name="gesture_arrow_right_title" />
+    <java-symbol type="string" name="gesture_arrow_up_title" />
+    <java-symbol type="string" name="gesture_circle_title" />
+    <java-symbol type="string" name="gesture_double_swipe_title" />
+
+    <!-- Device keyhandlers -->
+    <java-symbol type="array" name="config_deviceKeyHandlerLibs" />
+    <java-symbol type="array" name="config_deviceKeyHandlerClasses" />
 </resources>
