Cleanup actions arrays and add icons to some settings screens
Change-Id: I8b28ed519096eae0aaf2d9c003ffed3638a14df3

--- a/res/res/values/action_arrays.xml
+++ b/res/res/values/action_arrays.xml
@@ -199,6 +199,23 @@
         <item>**null**</item>
     </string-array>
 
+    <string-array name="screen_off_actions_to_exclude" translatable="false">
+        <item>**back**</item>
+        <item>**home**</item>
+        <item>**recents**</item>
+        <item>**menu**</item>
+        <item>**kill**</item>
+        <item>**lastapp**</item>
+        <item>**ime**</item>
+        <item>**power**</item>
+        <item>**power_menu**</item>
+        <item>**notifications**</item>
+        <item>**settings_panel**</item>
+        <item>**screenshot**</item>
+        <item>**search**</item>
+        <item>**split_screen**</item>
+    </string-array>
+
     <!-- Icon color options -->
     <string-array name="icon_color_mode_entries">
         <item>@string/icon_color_mode_all_icons</item>
