Add config for platforn certificate
Change-Id: I71df2a61b7dcb945c8bcb58d474a572684d0db3f

--- a/res/res/values/symbols.xml
+++ b/res/res/values/symbols.xml
@@ -195,4 +195,6 @@
     <java-symbol type="integer" name="config_buttonBrightnessSettingDefault" />
     <java-symbol type="integer" name="config_keyboardBrightnessSettingDefault" />
     <java-symbol type="bool" name="config_deviceHasVariableButtonBrightness" />
+
+    <java-symbol type="array" name="config_vendorPlatformSignatures" />
 </resources>
