--- a/res/res/values/action_arrays.xml
+++ b/res/res/values/action_arrays.xml
@@ -149,6 +149,7 @@
         <item>@string/shortcut_action_screenshot</item>
         <item>@string/shortcut_action_camera</item>
         <item>@string/shortcut_action_torch</item>
+        <item>@string/shortcut_action_toggle_screen</item>
         <!--<item>@string/shortcut_action_theme_switch</item>-->
         <item>@string/shortcut_action_nowontap</item>
         <item>@string/shortcut_action_voice_search</item>
@@ -182,6 +183,7 @@
         <item>**screenshot**</item>
         <item>**camera**</item>
         <item>**torch**</item>
+        <item>**toggle_screen**</item>
         <!--<item>**theme_switch**</item>-->
         <item>**nowontap**</item>
         <item>**voice_search**</item>
