Squashed commit of some of ezio's slimrecents changes
    Make cards a bit taller

    easier to tap

    Layout manager performances: cache less invisible views on Fast Mode

    when in fast mode, don't cache twice the screen size but only
    300 pixels

    Fix empty apps thumbnails on 8.1

    to manage the new hardware bitmaps in the right way, we now
    use the ImageView canvas to set the resized app screenshot instead
    of creating a new canvas.
    Doing this let's also do the bitmap resizing in the ImageView onDraw
    (so when we really show the image in the recents panel) and not as soon
    as we load the hardware screenshot for all recents task, with a nice
    benefit for panel loading  performances.

    For now let's skip also the thumbnail cache and see how the panel behaves
    without it.

    Fix blinking cards on notifyDataSetChanged()

    Cards would animate semi-transparent and back after removing
    other cards, but sometimes also when actually nothing changed
    (but notifyDataSetChanged() called).

    Add a custom ItemAnimator to still have the transparency thing
    going when expanding/collapsing cards.

    Change-Id: I14bcc9408db1b71f47a436cd46ea5a8a4a52ce2d

    Keep correct thumbnail aspect ratio

    Change-Id: Ib60f25d4822b66d92a454ab2416339be2c8f2aee

    Improve code and fix panel glitch when starring apps

    no need to reload all the panel stuff when starring an app
    This will also fix possible panel glitches

    Fix system fonts losing antialias with Slim Recents Auto Expand mode

    Improve performances and UI of Auto Expanded mode

    remove the useless expand arrow button for cards (who would ever
    expand the card to see the app preview instead of just starting the
    app?) and switch to the card options 3 dots like the fast mode.

    also load bitmaps for the two automatically expanded cards, skipping
    other apps

    Slimrecents: Improve card layout

    - Fixed size for app icon and expand/... butto

--- a/packages/SlimSystemUI/res/layout/card.xml
+++ b/packages/SlimSystemUI/res/layout/card.xml
@@ -36,47 +36,48 @@
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="45dp">
+                android:layout_height="49dp">
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <RelativeLayout
+                    <FrameLayout
                         android:id="@+id/thumbnail"
-                        android:layout_weight="1"
                         android:layout_gravity="center_vertical"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content" >
 
-                        <com.android.systemui.slimrecent.RecentImageView
+                        <com.android.systemui.slimrecent.AppIconImageView
                             android:id="@+id/app_icon"
                             android:padding="3dp"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
 
                         <com.android.systemui.slimrecent.RecentImageView
                             android:id="@+id/favorite_icon"
                             android:src="@drawable/ic_recent_favorite"
-                            android:layout_toEndOf="@id/app_icon"
+                            android:layout_gravity="end|top"
                             style="@style/card_header_favorite_icon" />
 
-                    </RelativeLayout>
+                    </FrameLayout>
 
                     <TextView
                         android:id="@+id/app_name"
                         android:gravity="center_vertical"
-                        android:layout_weight="2"
+                        android:maxLines="2"
+                        android:padding="3dp"
+                        android:layout_weight="1"
                         android:layout_width="0dp"
                         android:layout_height="match_parent" />
 
                     <ImageView
                         android:id="@+id/expand"
                         android:src="@drawable/ic_expand"
-                        android:layout_weight="1"
                         android:layout_gravity="center_vertical"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content" />
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="@dimen/recent_expand_button_padding" />
 
                 </LinearLayout>
                 <LinearLayout
@@ -87,13 +88,13 @@
                     android:layout_height="match_parent" />
             </FrameLayout>
 
-            <com.android.systemui.slimrecent.RecentImageView
+            <com.android.systemui.slimrecent.RecentThumbView
                 android:id="@+id/screenshot"
                 android:background="@android:color/transparent"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:visibility="gone"
-                android:layout_margin="4dp"
-                android:layout_height="wrap_content" />
+                android:layout_margin="4dp" />
 
         </LinearLayout>
 
