Add custom gesture settings
Change-Id: I7ecc65512ccca761a5ec42631c6d2ee0111a006f

--- a/res/res/values/attrs.xml
+++ b/res/res/values/attrs.xml
@@ -80,4 +80,13 @@
         <attr name="units" format="string|reference" />
     </declare-styleable>
 
+    <declare-styleable name="Key">
+        <attr name="scancode" format="integer" />
+        <attr name="name" format="string" />
+        <attr name="key" format="string" />
+        <attr name="path" format="string" />
+        <attr name="defaultAction" format="string" />
+        <attr name="screenOffGesture" format="boolean" />
+    </declare-styleable>
+
 </resources>
